apps/radarr/overlays/prod/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: radarr-dtrl
  namespace: media
spec:
  host: radarr-service.media.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
