apps/radarr/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: radarr-virtual-service
  namespace: media
spec:
  hosts:
  - "moviesearch.securefamily.tv"
  gateways:
  - default/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 7878
        host: radarr-service.media.svc.cluster.local
